# HA-Irrigation-Strategy

./: .gitignore  .yamllint  CHANGELOG.md  CLAUDE.md  ENGINE_ANALYSIS.md  ENTITIES.md  ENV_CONFIGURATION_GUIDE.md  FIXES_APPLIED.md  FIXES_SUMMARY.md  INSTALLATION_WARNINGS.md  MIGRATION.md  README.md  SYSTEM_GUIDE.html  SYSTEM_GUIDE.md  SYSTEM_REVIEW_FINDINGS.md  TESTING.md  appdaemon.yaml  config.yaml  crop_steering.env  crop_steering.env.example  crop_steering_lovelace.yaml  hacs.json  index.html  requirements-test.txt  ruff.toml
.claude/: settings.local.json
addons/: .ruff.toml
crop-steering-engine/: README.md  pyproject.toml
crop-steering-engine/.github/workflows/: ci.yml
crop-steering-engine/src/crop_steering_engine/: __init__.py  core.py
crop-steering-engine/tests/: test_core.py  test_decide_edge_cases.py  test_vmax.py
dashboards/: co2_environment.yaml  crop_steering.yaml  crop_steering_console.yaml  crop_steering_console_mobile.yaml  irrigation.yaml  legacy_irrigation.yaml  rootsense_history.yaml
deploy/: f2_feed_alerts.yaml  f2_zone_recipes.yaml
docs/: AGENT_INSTALL.md  AUTONOMOUS_SETPOINTS.md  CODE_REVIEW_FINDINGS.md  DASHBOARDS.md  FEATURES_AND_TODO.md  HOME_ASSISTANT_FORUM_POST.md  INSTALL_GUIDE.html  MIGRATION.md  SYSTEM_OVERVIEW.md  dynamic_zones_guide.md  installation_guide.md  operation_guide.md  remediation_tasklist.md  troubleshooting.md  vwc_ec_trainer.html
scripts/: build_lovelace.py  capture_demo_shots.js  capture_shots.py  check_tips_coverage.js  publish_addon.sh  render_guide.py  tips_data.json  verify_home.js  verify_overlay.py
(+148 files in other folders)
